# SmartClip-TUI

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
smartclip/: __init__.py  __main__.py  classifier.py  cli.py  clipboard_monitor.py  database.py  ui.py
tests/: __init__.py  test_classifier.py  test_database.py
